frontend/src/components/css/job.css
.headerImage {
    width: 100%;
    -o-object-fit: cover;
       object-fit: cover;
    -o-object-position: 0 0%;
       object-position: 0 0%;
    -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgb(250, 250, 250)), color-stop(75%, rgba(0, 0, 0, 0)));
    -webkit-mask-image: linear-gradient(rgb(250, 250, 250), rgba(0, 0, 0, 0) 75%);
}


.body {
    box-sizing: border-box;
    margin-top: -40vh;
    width: 100%;
    display: flex;
    position: relative;
    justify-content: space-around;
    gap: 50px;

    /* Typography */
    color: #EBEBEB;
    text-align: center;
    font-feature-settings: 'clig' off, 'liga' off;
    font-family: Montserrat;
    letter-spacing: -.2px;
    font-size: 1.2rem;
    font-style: normal;
    font-weight: 500;
    line-height: 150%; /* 30px */



    /* temp */

    padding-bottom: 10vh;

}



body * {
    background: transparent;
}

.left {
    width: 20vw;
    display: flex;
    flex-direction: column;
    gap: 50px;
}

.right {
    width: 60vw;
    text-align: left;
}

a, h1, h2, h3, h4, h5, h6, .body p {
    margin: 0;
}




/* Left containers */
.profile {
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 20px;

    justify-content: center;

    align-items: center;
    padding: calc(1.28rem * 1.25);
}

.profile > * {
    max-width: 75%;
}

.profilePicture {
    width: 30%;
    height: auto;
    border-radius: 50%;

}
.profileName {
    font-size: 2rem;
    word-wrap: normal;
    font-weight: 500;
}
.profileWebsite {
    color: #A39BB4;
    font-size: 1.24rem;
    font-style: normal;
    font-weight: 400;
    line-height: 150%;
    text-decoration: none;
}
.profileDescription {
    font-style: normal;
    font-size: 1.2rem;
    text-align: left;
    font-weight: 300;
    padding: 20px 0;
    line-height: 150%; 
}
.profileReports {
    color: #A39BB4;
    font-size: 1.24rem;
    font-style: normal;
    font-weight: 400;
    line-height: 150%;
}

.tools > h2,  .similarJobs > h2 {
    margin-top: calc(1.18rem * 1.25);
    padding-left: calc(1.18rem * 1.25);
}

.tools {
    display: flex;
    flex-direction: column;
    gap: 1.18rem;
    width: 100%;

    text-align: start;
    padding: 1.18rem;

}

.tools > ul {
    display: flex;
    flex-direction: column;
    list-style-type: none;

    padding: 0;
    padding-left: calc(1.18rem * 1.25);
    gap: 1.18rem;
    margin: 0;
}

.tools > ul > li > a {
    color: #ECECEC;
    text-decoration: none;
}


.tools > ul > li:first-child{
    padding: 1.15rem 0 0 0;
}

.tools > ul > li:last-child{
    padding: 0 0 1.15rem 0;
}

.similarJobs {
    display: flex;
    flex-direction: column;
    gap: 1.18rem;
    width: 100%;

    text-align: left;

    justify-content: center;
    padding: 1.18rem;

}

.similarJobs > ul {
    display: flex;
    flex-direction: column;
    list-style-type: none;

    padding: 0;
    padding-left: calc(1.18rem * 1.25);
    gap: 1.18rem;
    margin: 0;
}

.similarJobs > ul > li  a {
    display: flex;
    flex-direction: row;
    gap: 1.18rem;
    align-items: center;
}
.similarJobs > ul > li:not(:last-child) {
    padding: 1.15rem 0;
}

.similarJobs > ul > li  img {
    border-radius: 100%;
    aspect-ratio: 1 / 1;
}

.company {
    font-weight: 600;
}
.jobTitle {
    font-weight: 500;
}
.location {
    font-weight: 400;
}
.tryOut {
    display: flex;
    justify-content: center;
    gap: 10px;

    padding: 1.15rem 0;

    color: #EBEBEB;
    font-family: Montserrat;
    font-size: 1.14rem normal;
    text-decoration: none;
    font-weight: 500;
    line-height: normal;
    letter-spacing: -0.14px;
}





/* Utility classes */

.containerBorder {
    border-radius: 20px;
    background: linear-gradient(180deg, rgba(65, 65, 65, 0.05) 0%, rgba(255, 255, 255, 0.00) 100%);
    box-shadow: 0px 0.5px 0px 0px rgba(255, 255, 255, 0.50) inset, 0px -2px 40px 0px rgba(187, 155, 255, 0.15), 0px -2px 10px 0px rgba(233, 223, 255, 0.30);
}

.subHeader {
    color: #A39BB4;
    font-feature-settings: 'clig' off, 'liga' off;
    font-family: Montserrat;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 180%;
}

.none {
    color: unset;
    text-decoration: unset;
    font-weight: unset;
    font-size: unset;
}

